# tendrilix

./: Cargo.toml  README.md
desktop-client/: Cargo.toml
desktop-client/src/: config.rs  directory.rs  http_client.rs  main.rs
tendrilix/: Cargo.toml  run-all-tests.sh
tendrilix/src/: allowed_ips.rs  authz.rs  bounded.rs  ip_packet.rs  ipnet.rs  lib.rs  nic.rs  timestamper.rs
tendrilix/src/control/: peer_health.rs  reconciler.rs
tendrilix/src/noise/: handshake.rs  mod.rs  rate_limiter.rs  relay.rs  session.rs
tendrilix/src/types/: mod.rs
tendrilix/src/types/v1alpha1/: error.rs  mod.rs
vitis/: Cargo.toml
vitis/src/: allowed_ips.rs  device.rs  index.rs  lib.rs  packet_pool.rs  serialization.rs
vitis/src/control/: mod.rs
vitis/src/noise/: errors.rs  timers.rs
vitis/src/types/v1alpha1/: net_map.rs
