[package]
name = "desktop-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.51", features = ["derive"] }
chrono = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
tokio = { version = "1", features = ["full"] }
tun-rs = { version = "2.8.5", features = ["async_tokio"] }
postcard = { version = "1.1.3", default-features = false, features = ["use-std", "alloc"] }
hashbrown = "0.17.1"

vitis = { path = "../vitis", features = ["std"] }
