[package]
name = "vitis"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-futures = "0.1.2"
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embassy-net = { version = "0.9", features = [ "medium-ip", "proto-ipv4", "proto-ipv6", "udp" ] }
embassy-net-driver-channel = "0.4.0"
defmt-or-log = "0.2.3"
defmt = { version = "1.1.0", optional = true }
log = { version = "0.4.29", optional = true }
heapless = { workspace = true }
aead = { version = "0.5.2", default-features = false }
base64 = { version = "0.22", default-features = false }
blake2 = { version = "0.10", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = [
    "reusable_secrets",
    "static_secrets",
    "serde",
] }
portable-atomic = "1.13.1"
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.6.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
tokio = { version = "1", features = ["sync", "time", "net", "macros"], optional = true }
hashbrown = { version = "0.17.1", default-features = false, features = [ 
    "default-hasher",
    "allocator-api2",
], optional = true }
serde = { workspace = true }
chrono = { workspace = true }
hash32 = "0.3.0"

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }
embassy-time = { version = "0.5.1", features = ["std"] }
etherparse = "0.13"
serde_json = "1.0.150"
postcard = { version = "1.1.3", default-features = false, features = ["use-std", "alloc"] }
tokio = { version = "1", features = ["full"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[features]
default = ["std", "allowed-ips-ipv4", "allowed-ips-ipv6"]
std = ["alloc", "log", "dep:tokio"]
defmt = [
    "dep:defmt",
    "defmt-or-log/defmt",
    "embassy-net/defmt",
    "embassy-net-driver-channel/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "heapless/defmt",
]
log = [
    "dep:log",
    "defmt-or-log/log",
    "embassy-net/log",
    "embassy-net-driver-channel/log",
    "embassy-sync/log",
    "embassy-time/log",
]

# Address families enabled in the AllowedIPs routing trie.
allowed-ips-ipv4 = []
allowed-ips-ipv6 = []

# Heap allocation support.
alloc = ["dep:hashbrown", "serde/alloc"]

# Minimal memory profile.
memory-tiny = []
# Small embedded profile.
memory-small = []
# Balanced profile.
memory-medium = []
# High-performance profile.
memory-large = []
